prost-unwrap-proto-tests/tests/ui/with_original_mod_duplicate.stderr
error: Multiple `with_original_mod` parameters are not allowed
  --> tests/ui/with_original_mod_duplicate.rs:10:6
   |
10 |     .with_original_mod(crate::original)
   |      ^^^^^^^^^^^^^^^^^
